--- a/docs/scrna3.ipynb
+++ b/docs/scrna3.ipynb
@@ -49,14 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Access ![](https://img.shields.io/badge/Access-10b981) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Query files by provenance metadata"
+    "### Query files by provenance metadata"
    ]
   },
   {
@@ -99,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Query files based on biological metadata "
+    "### Query files by biological metadata "
    ]
   },
   {
@@ -139,21 +132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Transform ![](https://img.shields.io/badge/Transform-10b981) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Compare gene sets"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Get file objects:"
+    "## Inspect file metadata"
    ]
   },
   {
@@ -162,16 +141,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = ln.File.filter()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file1, file2 = query.list()"
+    "query_set = ln.File.filter().all()\n",
+    "\n",
+    "file1, file2 = query_set[0], query_set[1]"
    ]
   },
   {
@@ -214,17 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load files into memory:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file1_adata = file1.load()\n",
-    "file2_adata = file2.load()"
+    "## Compare features"
    ]
   },
   {
@@ -260,7 +222,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Compare cell types"
+    "## Compare cell types"
    ]
   },
   {
@@ -281,6 +243,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Load the individual files"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We could either load the files into memory or access them in `backed` mode through `.backed()` to lazily load their content from the cloud or the disk.display_markdown\n",
+    "\n",
+    "Let's load them into memory:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata1 = file1.load()\n",
+    "adata2 = file2.load()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We can now subset the two datasets by shared cell types:"
    ]
   },
@@ -290,43 +278,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file1_adata_subset = file1_adata[\n",
-    "    file1_adata.obs[\"cell_type\"].isin(shared_celltypes_names)\n",
-    "]\n",
+    "adata1_subset = adata1[adata1.obs[\"cell_type\"].isin(shared_celltypes_names)]\n",
     "\n",
-    "file2_adata_subset = file2_adata[\n",
-    "    file2_adata.obs[\"cell_type\"].isin(shared_celltypes_names)\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Concatenate subsetted datasets:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata_concat = ad.concat(\n",
-    "    [file1_adata_subset, file2_adata_subset],\n",
-    "    label=\"file\",\n",
-    "    keys=[file1.description, file2.description],\n",
-    ")\n",
-    "adata_concat"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata_concat.obs.value_counts()"
+    "adata2_subset = adata2[adata2.obs[\"cell_type\"].isin(shared_celltypes_names)]"
    ]
   }
  ],
