--- a/docs/scrna4.ipynb
+++ b/docs/scrna4.ipynb
@@ -22,7 +22,9 @@
    "source": [
     "Here, we'll analyze the growing dataset by loading it into memory.\n",
     "\n",
-    "This is only possible if it's not too large. If you deal with particularly large data, please read the guide on iterating over datta batches (to come)."
+    "This is only possible if it's not too large.\n",
+    "\n",
+    "If your data is large, you'll likely want to iterate over the dataset to train a model, the topic of the next page ([![scrna5/6](https://img.shields.io/badge/scrna5/6-lightgrey)](/scrna5))."
    ]
   },
   {
@@ -187,21 +189,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "file = ln.File(\"./figures/pca_itm2b.pdf\", description=\"My result on ITM2B\")\n",
-    "file.save()"
+    "We could save a plot as a pdf and then see it in the flow diagram:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
+    "file = ln.File(\"./figures/pca_itm2b.pdf\", description=\"My result on ITM2B\")\n",
+    "file.save()\n",
     "file.view_flow()"
    ]
   },
@@ -209,11 +214,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Given the image is part of the notebook, there isn't an actual need to save it and you can also rely on the report that you'll create when saving the notebook via the command line via:\n",
+    "But given the image is part of the notebook, we can also rely on the report that we create when saving the notebook via the command line via:\n",
     "\n",
     "```\n",
     "lamin save <notebook_path>\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To see the current notebook, visit: [lamin.ai/laminlabs/lamindata/record/core/Transform?uid=mfWKm8OtAzp8z8](https://lamin.ai/laminlabs/lamindata/record/core/Transform?uid=mfWKm8OtAzp8z8)\n",
+    "\n",
+    "![](https://lamin-site-assets.s3.amazonaws.com/.lamindb/RGXj5wcAf7EAc6J8aBoM.png)"
    ]
   }
  ],
