--- a/docs/scrna5.ipynb
+++ b/docs/scrna5.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "In the [previous tutorial](scrna3), we loaded an entire dataset into memory to perform a simple analysis.\n",
     "\n",
-    "Here, we'll iterate over the files within the dataset, to train an ML model."
+    "Here, we'll iterate over the files within the dataset to train an ML model."
    ]
   },
   {
