📝 Add link to custom validator

--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -173,6 +173,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This following represents a manual metadata curation process that often occur in notebooks. See [custom validator](docs:lnschema-bionty) for bulk validation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Validate genes in `.var`"
    ]
   },
