--- a/docs/scrna3.ipynb
+++ b/docs/scrna3.ipynb
@@ -49,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Query files by provenance metadata"
+    "## Query files by provenance metadata"
    ]
   },
   {
@@ -92,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Query files by biological metadata "
+    "## Query files by biological metadata "
    ]
   },
   {
