📝 Simplify scrna guide

--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -25,7 +25,9 @@
     "\n",
     "Along the way, you'll see how to create reports, leverage data lineage, and query individual data batches stored as files.\n",
     "\n",
-    "Specifically, you will:\n",
+    "If you're interested in directly using the type of large curated atlas of scRNA-seq datasets that arises from the present guide, see the [CELLxGENE Census guide](/cellxgene-census).\n",
+    "\n",
+    "Here, you will:\n",
     "\n",
     "1. read a single `.h5ad` file as an `AnnData` object and seed a growing dataset with it (![scrna1/6](https://img.shields.io/badge/scrna1/6-lightgrey), current page)\n",
     "2. append a new data batch (a new `.h5ad` file) and create a new version of this dataset ([![scrna2/6](https://img.shields.io/badge/scrna2/6-lightgrey)](/scrna2))\n",
@@ -120,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By calling `ln.dev.datasets.anndata_human_immune_cells` below, we download the dataset from the CellxGene portal [here](https://cellxgene.cziscience.com/collections/62ef75e4-cbea-454e-a0ce-998ec40223d3) and pre-populate some LaminDB registries."
+    "By calling {func}`~lamindb.dev.datasets.anndata_human_immune_cells`, we load a subsampled version of a [dataset from CZ CELLxGENE](https://cellxgene.cziscience.com/collections/62ef75e4-cbea-454e-a0ce-998ec40223d3) and pre-populate the corresponding LaminDB registries: {class}`lnschema_bionty.Feature`, {class}`lnschema_bionty.ULabel`, {class}`lnschema_bionty.Gene`, {class}`lnschema_bionty.CellType`, {class}`lnschema_bionty.CellLine`, {class}`lnschema_bionty.ExperimentalFactor`."
    ]
   },
   {
@@ -133,9 +135,7 @@
    },
    "outputs": [],
    "source": [
-    "adata = ln.dev.datasets.anndata_human_immune_cells(\n",
-    "    populate_registries=True  # this pre-populates registries\n",
-    ")"
+    "adata = ln.dev.datasets.anndata_human_immune_cells(populate_registries=True)"
    ]
   },
   {
@@ -151,13 +151,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This `AnnData` is already standardized using the same public ontologies underlying [lnschema-bionty](docs:lnschema-bionty), hence, we expect validation to be simple.\n",
-    "\n",
-    "Nonetheless, LaminDB focuses on building clean in-house registries \n",
+    "This `AnnData` is standardized using the [CZI single-cell-curation validator](https://github.com/chanzuckerberg/single-cell-curation) the same public ontologies underlying [lnschema-bionty](docs:lnschema-bionty). Because registries are populated, validation passes.\n",
     "\n",
     "```{note}\n",
     "\n",
-    "In the next notebook, we'll look at the more difficult case of a non-standardized dataset that requires curation.\n",
+    "In the [this guide](/scrna2), we'll curate a non-standardized dataset as you might get from an external partner.\n",
     "\n",
     "```"
    ]
@@ -166,21 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Validate ![](https://img.shields.io/badge/Validate-10b981)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This following represents a manual metadata curation process that often occur in notebooks. See [custom validator](docs:lnschema-bionty) for bulk validation."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Validate genes in `.var`"
+    "The gene registry provides metadata for each of the 36k gene measured in the `AnnData`:"
    ]
   },
   {
@@ -189,73 +173,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.Gene.validate(adata.var.index, lb.Gene.ensembl_gene_id);"
+    "lb.Gene.filter().df().head()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "148 gene identifiers can’t be validated (not currently in the `Gene` registry). Let’s inspect them to see what to do:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "inspector = lb.Gene.inspect(adata.var.index, lb.Gene.ensembl_gene_id)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Logging says 35 of the non-validated ids can be found in the Bionty reference. Let's register them:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "records = lb.Gene.from_values(inspector.non_validated, lb.Gene.ensembl_gene_id)\n",
-    "ln.save(records)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The remaining 113 are legacy IDs, not present in the current Ensembl assembly (e.g. [ENSG00000112096](https://www.ensembl.org/Homo_sapiens/Gene/Idhistory?g=ENSG00000112096)).\n",
-    "\n",
-    "We'd still like to register them, but won't dive into the details of converting them from an old Ensembl version to the current one."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "validated = lb.Gene.validate(adata.var.index, lb.Gene.ensembl_gene_id)\n",
-    "records = [lb.Gene(ensembl_gene_id=id) for id in adata.var.index[~validated]]\n",
-    "ln.save(records)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now all genes pass validation:"
+    "When we create a `File` object from an `AnnData`, we automatically link its features:"
    ]
   },
   {
@@ -264,239 +189,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.Gene.validate(adata.var.index, lb.Gene.ensembl_gene_id);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Our in-house Gene registry provides rich metadata for each gene measured in the `AnnData`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lb.Gene.filter().df().head(10)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "There are about 36k genes in the registry, all for organism \"human\"."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lb.Gene.filter().df().shape"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Validate metadata in `.obs`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata.obs.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.Feature.validate(adata.obs.columns)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1 feature is not validated: `\"donor\"`. Let's register it:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "feature = ln.Feature(name=\"donor\", type=\"category\", registries=[ln.ULabel])\n",
-    "feature.save()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```{tip}\n",
-    "\n",
-    "You can also use `features = ln.Feature.from_df(df)` to bulk create features with types.\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "All metadata columns are now validated:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.Feature.validate(adata.obs.columns)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Next, let's validate the corresponding labels of each feature.\n",
-    "\n",
-    "Some of the metadata labels can be typed using dedicated registries like {class}`~docs:lnschema_bionty.CellType`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "validated = lb.CellType.validate(adata.obs.cell_type)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Register non-validated cell types - they can all be loaded from a public ontology through Bionty:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "records = lb.CellType.from_values(adata.obs.cell_type[~validated], \"name\")\n",
-    "ln.save(records)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lb.ExperimentalFactor.validate(adata.obs.assay)\n",
-    "lb.Tissue.validate(adata.obs.tissue);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Because we didn't mount a [custom schema](https://lamin.ai/docs/schemas) that contains a `Donor` registry, we use the {class}`~lamindb.ULabel` registry to track donor ids:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.ULabel.validate(adata.obs.donor);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Donor labels are not validated, so let's register them:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "donors = [ln.ULabel(name=name) for name in adata.obs.donor.unique()]\n",
-    "ln.save(donors)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.ULabel.validate(adata.obs.donor);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Register ![](https://img.shields.io/badge/Register-10b981) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "modalities = ln.Modality.lookup()\n",
-    "experimental_factors = lb.ExperimentalFactor.lookup()\n",
-    "organism = lb.Organism.lookup()\n",
-    "features = ln.Feature.lookup()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Register data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "When we create a `File` object from an `AnnData`, we’ll automatically link its feature sets and get information about unmapped categories:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
+    "modalities = ln.Modality.lookup()  # optional: label by data modality\n",
     "file = ln.File.from_anndata(\n",
     "    adata, description=\"Conde22\", field=lb.Gene.ensembl_gene_id, modality=modalities.rna\n",
     ")"
@@ -505,9 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "file.save()"
@@ -517,7 +208,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The file has the following 2 linked feature sets:"
+    "The file has 2 linked feature sets, one for measured genes and one for measured metadata:"
    ]
   },
   {
@@ -533,14 +224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Register metadata links"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let us first link external labels for the entire file:"
+    "Let's now validate the corresponding label slots in the `AnnData` and annotate the file with labels:"
    ]
   },
   {
@@ -553,40 +237,16 @@
    },
    "outputs": [],
    "source": [
+    "experimental_factors = lb.ExperimentalFactor.lookup()\n",
+    "organism = lb.Organism.lookup()\n",
+    "features = ln.Feature.lookup()\n",
+    "\n",
     "file.labels.add(organism.human, feature=features.organism)\n",
-    "file.labels.add(experimental_factors.single_cell_rna_sequencing, feature=features.assay)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Next, we parse the columns of `adata.obs` for additional metadata:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
+    "file.labels.add(experimental_factors.single_cell_rna_sequencing, feature=features.assay)\n",
     "file.labels.add(adata.obs.cell_type, feature=features.cell_type)\n",
     "file.labels.add(adata.obs.assay, feature=features.assay)\n",
     "file.labels.add(adata.obs.tissue, feature=features.tissue)\n",
     "file.labels.add(adata.obs.donor, feature=features.donor)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file.features"
    ]
   },
   {
@@ -609,7 +269,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create a dataset"
+    "## Seed a dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's create a first version of a dataset that will encompass many `h5ad` files when more data is ingested.\n",
+    "\n",
+    "```{note}\n",
+    "\n",
+    "To see the result of the incremental growth, take a look at the [CELLxGENE Census guide](/cellxgene-census) for an instance with ~1k h5ads and ~50 million cells.\n",
+    "\n",
+    "```"
    ]
   },
   {
@@ -619,68 +292,15 @@
    "outputs": [],
    "source": [
     "dataset = ln.Dataset(file, name=\"My versioned scRNA-seq dataset\", version=\"1\")\n",
-    "\n",
-    "dataset"
+    "dataset.save()\n",
+    "dataset.labels.add_from(file)  # seed the initial labels of the dataset"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's inspect the features measured in this dataset which were inherited from the file:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset.features"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This looks all good, hence, let's save it:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset.save()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Annotate by linking labels:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset.labels.add(experimental_factors.single_cell_rna_sequencing, features.assay)\n",
-    "dataset.labels.add(organism.human, features.organism)\n",
-    "dataset.labels.add(adata.obs.cell_type, feature=features.cell_type)\n",
-    "dataset.labels.add(adata.obs.assay, feature=features.assay)\n",
-    "dataset.labels.add(adata.obs.tissue, feature=features.tissue)\n",
-    "dataset.labels.add(adata.obs.donor, feature=features.donor)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For this version 1 of the dataset, dataset and file match each other. But they're independently tracked and queryable through their registries."
+    "For this version 1 of the dataset, dataset and file match each other. But they're independently tracked and queryable through their registries:"
    ]
   },
   {
@@ -696,7 +316,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And we can access the file like so:"
+    "Access the file like so:"
    ]
   },
   {
@@ -706,6 +326,13 @@
    "outputs": [],
    "source": [
     "dataset.file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "See data flow:"
    ]
   },
   {
