--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "Along the way, you'll see how to create reports, leverage data lineage, and query individual data batches stored as files.\n",
     "\n",
-    "If you're interested in directly using the type of large curated atlas of scRNA-seq datasets that arises from the present guide, see the [CELLxGENE Census guide](/cellxgene-census).\n",
+    "If you're interested in directly using the type of large curated atlas of scRNA-seq datasets that arises from the present guide, see the [CELLxGENE Census guide](docs:cellxgene-census).\n",
     "\n",
     "Here, you will:\n",
     "\n",
@@ -76,31 +76,22 @@
    "source": [
     "import lamindb as ln\n",
     "import lnschema_bionty as lb\n",
-    "import pandas as pd\n",
     "\n",
-    "ln.track()"
+    "ln.track()\n",
+    "ln.settings.verbosity = \"hint\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Access ![](https://img.shields.io/badge/Access-10b981)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let us look at the data of [Conde _et al._, Science (2022)](https://doi.org/10.1126/science.abl5197).\n",
+    "Let us look at the standardized data of [Conde _et al._, Science (2022)](https://doi.org/10.1126/science.abl5197), available from [CZ CELLxGENE](https://cellxgene.cziscience.com/).\n",
     "\n",
-    "These data are available in standardized form from the [CellxGene data portal](https://cellxgene.cziscience.com/).\n",
-    "\n",
-    "Here, we'll use it to seed a growing in-house store of scRNA-seq data managed with the corresponding metadata in LaminDB registries.\n",
+    "Here, we'll use it to seed a growing in-house dataset of scRNA-seq data batches.\n",
     "\n",
     "```{note}\n",
     "\n",
-    "If you're not interested in managing large collections of in-house data and you'd just like to query public data, please take a look at [CellxGene census](docs:cellxgene-census), which exposes all datasets hosted in the data portal as a concatenated TileDB SOMA store.\n",
+    "If you're not interested in managing large collections of in-house data and you'd just like to query public data, please take a look at the [CELLxGENE guide](docs:cellxgene-census).\n",
     "\n",
     "```"
    ]
@@ -122,7 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By calling {func}`~lamindb.dev.datasets.anndata_human_immune_cells`, we load a subsampled version of a [dataset from CZ CELLxGENE](https://cellxgene.cziscience.com/collections/62ef75e4-cbea-454e-a0ce-998ec40223d3) and pre-populate the corresponding LaminDB registries: {class}`lnschema_bionty.Feature`, {class}`lnschema_bionty.ULabel`, {class}`lnschema_bionty.Gene`, {class}`lnschema_bionty.CellType`, {class}`lnschema_bionty.CellLine`, {class}`lnschema_bionty.ExperimentalFactor`."
+    "By calling {func}`~lamindb.dev.datasets.anndata_human_immune_cells`, we load a subsampled version of a [dataset from CZ CELLxGENE](https://cellxgene.cziscience.com/collections/62ef75e4-cbea-454e-a0ce-998ec40223d3) and pre-populate the corresponding LaminDB registries: {class}`~lamindb.Feature`, {class}`~lamindb.ULabel`, {class}`~lnschema_bionty.Gene`, {class}`~lnschema_bionty.CellType`, {class}`~lnschema_bionty.CellLine`, {class}`~lnschema_bionty.ExperimentalFactor`."
    ]
   },
   {
@@ -151,7 +142,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This `AnnData` is standardized using the [CZI single-cell-curation validator](https://github.com/chanzuckerberg/single-cell-curation) the same public ontologies underlying [lnschema-bionty](docs:lnschema-bionty). Because registries are populated, validation passes.\n",
+    "This `AnnData` is standardized using the [CZI single-cell-curation validator](https://github.com/chanzuckerberg/single-cell-curation) using the same public ontologies that underly {mod}`lnschema_bionty`. Because registries are pre-populated, validation passes.\n",
     "\n",
     "```{note}\n",
     "\n",
@@ -189,9 +180,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "modalities = ln.Modality.lookup()  # optional: label by data modality\n",
+    "modalities = ln.Modality.lookup()\n",
     "file = ln.File.from_anndata(\n",
-    "    adata, description=\"Conde22\", field=lb.Gene.ensembl_gene_id, modality=modalities.rna\n",
+    "    adata,\n",
+    "    field=lb.Gene.ensembl_gene_id,  # field to validate and link features\n",
+    "    key=\"scrna/conde22.h5ad\",  # optional: a relative path in your default storage\n",
+    "    description=\"Human immune cells from Conde22\",  # optional: a description\n",
+    "    modality=modalities.rna,  # optional: label by data modality\n",
     ")"
    ]
   },
@@ -280,7 +275,7 @@
     "\n",
     "```{note}\n",
     "\n",
-    "To see the result of the incremental growth, take a look at the [CELLxGENE Census guide](/cellxgene-census) for an instance with ~1k h5ads and ~50 million cells.\n",
+    "To see the result of the incremental growth, take a look at the [CELLxGENE Census guide](docs:cellxgene-census) for an instance with ~1k h5ads and ~50 million cells.\n",
     "\n",
     "```"
    ]
