--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -78,7 +78,15 @@
     "import lnschema_bionty as lb\n",
     "\n",
     "ln.track()\n",
-    "ln.settings.verbosity = \"hint\""
+    "ln.settings.verbosity = \"hint\"\n",
+    "lb.settings.organism = \"human\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ingest a file"
    ]
   },
   {
@@ -87,33 +95,7 @@
    "source": [
     "Let us look at the standardized data of [Conde _et al._, Science (2022)](https://doi.org/10.1126/science.abl5197), available from [CZ CELLxGENE](https://cellxgene.cziscience.com/).\n",
     "\n",
-    "Here, we'll use it to seed a growing in-house dataset of scRNA-seq data batches.\n",
-    "\n",
-    "```{note}\n",
-    "\n",
-    "If you're not interested in managing large collections of in-house data and you'd just like to query public data, please take a look at the [CELLxGENE guide](docs:cellxgene-census).\n",
-    "\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "lb.settings.organism = \"human\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "By calling {func}`~lamindb.dev.datasets.anndata_human_immune_cells`, we load a subsampled version of a [dataset from CZ CELLxGENE](https://cellxgene.cziscience.com/collections/62ef75e4-cbea-454e-a0ce-998ec40223d3) and pre-populate the corresponding LaminDB registries: {class}`~lamindb.Feature`, {class}`~lamindb.ULabel`, {class}`~lnschema_bionty.Gene`, {class}`~lnschema_bionty.CellType`, {class}`~lnschema_bionty.CellLine`, {class}`~lnschema_bionty.ExperimentalFactor`."
+    "By calling {func}`~lamindb.dev.datasets.anndata_human_immune_cells`, we load a subsampled version of the [dataset from CZ CELLxGENE](https://cellxgene.cziscience.com/collections/62ef75e4-cbea-454e-a0ce-998ec40223d3) and pre-populate the corresponding LaminDB registries: {class}`~lamindb.Feature`, {class}`~lamindb.ULabel`, {class}`~lnschema_bionty.Gene`, {class}`~lnschema_bionty.CellType`, {class}`~lnschema_bionty.CellLine`, {class}`~lnschema_bionty.ExperimentalFactor`."
    ]
   },
   {
@@ -142,11 +124,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This `AnnData` is standardized using the [CZI single-cell-curation validator](https://github.com/chanzuckerberg/single-cell-curation) using the same public ontologies that underly {mod}`lnschema_bionty`. Because registries are pre-populated, validation passes.\n",
+    "This `AnnData` is standardized using the [CZI single-cell-curation validator](https://github.com/chanzuckerberg/single-cell-curation) with the same public ontologies that underlie {mod}`lnschema_bionty`. Because registries are pre-populated, validation passes.\n",
     "\n",
     "```{note}\n",
     "\n",
-    "In the [this guide](/scrna2), we'll curate a non-standardized dataset as you might get from an external partner.\n",
+    "In the [next guide](/scrna2), we'll curate a non-standardized dataset as you might get from an external partner.\n",
     "\n",
     "```"
    ]
@@ -161,7 +143,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "lb.Gene.filter().df().head()"
@@ -177,7 +163,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "modalities = ln.Modality.lookup()\n",
@@ -187,7 +177,8 @@
     "    key=\"scrna/conde22.h5ad\",  # optional: a relative path in your default storage\n",
     "    description=\"Human immune cells from Conde22\",  # optional: a description\n",
     "    modality=modalities.rna,  # optional: label by data modality\n",
-    ")"
+    ")\n",
+    "file"
    ]
   },
   {
@@ -254,7 +245,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "file.describe()"
@@ -311,7 +306,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Access the file like so:"
+    "Access the underlying file like so:"
    ]
   },
   {
